--- a/colab/ddsp_guitar_tutorial.ipynb
+++ b/colab/ddsp_guitar_tutorial.ipynb
@@ -42,8 +42,8 @@
    "outputs": [],
    "source": [
     "# リポジトリをクローン\n",
-    "!git clone <YOUR_REPOSITORY_URL>\n",
-    "%cd ddsp_guitar\n",
+    "!git clone https://github.com/meowkawaiijp/DDSP.git\n",
+    "%cd DDSP\n",
     "\n",
     "# 依存関係をインストール\n",
     "!pip install -r requirements.txt\n",
